# hmll

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yaml  python.yaml
cmake/: liburing.cmake  tracy.cmake
examples/: safetensors.c
include/hmll/: cuda.h  fetcher.h  hmll.h  memory.h  safetensors.h  status.h  types.h
include/hmll/unix/: fetcher.h  fetcher_io_uring.h  iouring.h  mmap.h
lib/: buffer.c  context.c  cuda.c  dtypes.c  errors.c  fetcher.c  hmll_safetensors.c  hmll_status.c  memory.c  misc.c  probe.c  safetensors.c  sources.c  status.c  tensors.c
lib/python/: CMakeLists.txt  context.cpp  context.h  context.hpp  fetcher.cpp  fetcher.hpp  formatters.hpp  ndarray.hpp  pyhmll.cpp  pyproject.toml  safetensors.cpp  specs.cpp  specs.hpp
lib/python/pyhmll/: __init__.py
lib/unix/: fetcher_io_uring.c  iouring.c  mmap.c
tests/: test_hmll_dtype.cpp  test_hmll_status.cpp  test_hmll_tensor_specs.cpp  tests_hmll_io_uring.cpp  tests_hmll_memory.cpp  tests_hmll_safetensors.cpp  tests_hmll_status.cpp  tests_hmll_tensor_specs.cpp
