[project]
name = "pyhmll"
version = "0.1.0"
description = "Hugging Face Models Loading Library"
readme = "../../README.md"
requires-python = ">=3.9"
authors = [
    { name = "Morgan Funtowicz", email = "morgan@hf.co" },
]
classifiers = [
    "License :: Apache 2",
]

[project.urls]
Homepage = "https://github.com/mfuntowicz/hmll"

[build-system]
requires = [
    "setuptools>=80",
    "nanobind==2.10.2",
    "cmake>=3.25",
]
build-backend = "setuptools.build_meta"